--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,1 +1,10 @@
-<p>navigation works!</p>
+<mat-toolbar class="navbar">
+  <a routerLink="/movies">
+    <h2 style="margin-right: 10px;">myFlix</h2>
+  </a>
+  <span class="example-spacer"></span>
+  <a routerLink="/profile">Profile</a>
+  <button mat-icon-button aria-label="Logout" (click)="logoutUser()">
+    <mat-icon>exit_to_app</mat-icon>
+  </button>
+</mat-toolbar>
